# autotests_learn

./: .env.example  .gitignore  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  screenshot_report.py  tasks.py
.github/workflows/: run_tests.yml
api/: client.py
api/endpoints/: pet.py
config/: settings.py
pages/: base_page.py  cart_page.py  checkout_page.py  inventory_page.py  login_page.py
petstore/: mock_server.py
petstore/api/: client.py
petstore/api/endpoints/: pet.py
petstore/schemas/: pet_schema.py
petstore/tests/: conftest.py  test_create_pet.py  test_update_pet.py
saucedemo/pages/: cart_page.py  checkout_page.py  inventory_page.py  login_page.py
saucedemo/tests/: conftest.py  test_e2e_purchase.py  test_login_errors.py
schemas/: pet_schema.py
tests/: browser_utils.py  mock_server.py  screenshot_report.py
tests/api/: conftest.py  test_create_pet.py  test_delete_pet.py  test_find_by_status.py  test_get_pet.py
tests/ui/: conftest.py  test_e2e_purchase.py  test_login_errors.py
utils/: browser_utils.py  screenshot_report.py
